k8s/incluster-oracle/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: incluster-oracledb
  name: incluster-oracledb
