k8s/incluster-oracle/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: incluster-oracledb
  name: incluster-oracledb
  namespace: incluster-oracledb
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: incluster-oracledb
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: incluster-oracledb
    spec:
      automountServiceAccountToken: true
      containers:
      - env:
        - name: ORACLE_PASSWORD
          value: supersecretpassword
        image: gvenzl/oracle-free:23.4-slim-faststart
        imagePullPolicy: IfNotPresent
        name: incluster-oracledb
        ports:
        - containerPort: 1521
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
